--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,42 +1,24 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
-    "display": "React Native",
-    "_version": "3.0.2",
-    "compilerOptions": {
-      "target": "esnext",
-      "module": "commonjs",
-      "types": ["react-native", "jest"],
-      "lib": [
-        "es2019",
-        "es2020.bigint",
-        "es2020.date",
-        "es2020.number",
-        "es2020.promise",
-        "es2020.string",
-        "es2020.symbol.wellknown",
-        "es2021.promise",
-        "es2021.string",
-        "es2021.weakref",
-        "es2022.array",
-        "es2022.object",
-        "es2022.string"
-      ],
-      "allowJs": true,
-      "jsx": "react-native",
-      "noEmit": true,
-      "isolatedModules": true,
-      "strict": true,
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "allowSyntheticDefaultImports": true,
-      "forceConsistentCasingInFileNames": false,
-      "esModuleInterop": true,
-      "skipLibCheck": true
-    },
-    "exclude": [
-      "node_modules",
-      "babel.config.js",
-      "metro.config.js",
-      "jest.config.js"
-    ]
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Create React App",
+  "_version": "2.0.0",
+
+  "compilerOptions": {
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "target": "es2015",
+
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "noEmit": true,
+    "noFallthroughCasesInSwitch": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true
   }
+}
